--- a/styles/recargas.css
+++ b/styles/recargas.css
@@ -1,10 +1,10 @@
-@import url <"https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@1,700&display=swap">
+@import url('https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@1,700&display=swap');
 
 body {
-/*    width: 100%;*/
+    width: 100%;
 
 }
-header {
+.title {
     margin: auto;
     text-align: center;
     font-family:'Amaranth', sans-serif;
