--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@1,700&display=swap');
+
+ * {
+
+	margin: 0;
+
+}
+
 body {
-    
+    background: rgb(221, 219, 219);
+    font-family: 'Lato', sans-serif;
 }
 /* Estilos pára el heading bar*/
 
@@ -15,9 +24,10 @@ body {
 
 #flex1 {
     display: flex;
-    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
-    background-color: aqua;
+    background-color: black;
+    color: white;
 }
 
 #info2 {
@@ -35,7 +45,7 @@ body {
 }
 
 .carrusel__track-container {
-    background: #FFE400;
+    background-color: transparent;
     
     height: 100%;
     width: 100%;
@@ -76,6 +86,11 @@ body {
     object-fit: cover;
     background-color: transparent;
 }
+.pruebaboton h1 {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
 
 .carrusel__button {
     font-size: 50px;
@@ -95,4 +110,33 @@ body {
     left: -30px;
 }
 
+#extraInfo {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
 
+}
+
+#info2 {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+}
+
+#parrafo1 {
+    margin-left: 10%;
+    width: 700px;
+    padding: 12px;
+    padding-top: 20px;
+    background-color: black;
+    color: white;
+}
+
+#parrafo1_0 {
+    font-size: large;
+    width: ;
+    background-color: #312e2e;
+    color: white;
+    margin: 1%;
+    padding: 1%;
+}
