--- a/styles/style_customize.css
+++ b/styles/style_customize.css
@@ -1,4 +1,3 @@
-
 * {
 	padding: 0;
 	margin: 0;
@@ -7,7 +6,8 @@
 
 body {
 	background: #ddeefc;
-	font-family: 'Lato', sans-serif;
+	/* font-family: 'Lato', sans-serif; */
+	font-family:'Amaranth', sans-serif;
 }
 
 .contenedor {
@@ -132,7 +132,7 @@ body {
 	height: 50px;
 	font-size: 20px;
 	line-height: 20px;
-	background: #2364d2;
+	background: rgb(167, 164, 10);
 	color: #fff;
 	position: relative;
 	top: -25px;
@@ -146,7 +146,7 @@ body {
 }
 
 .contenedor-btn .btn-abrir-formulario:hover {
-	background: #1850b1;
+	background: rgb(167, 164, 10);
 }
 
 .contenedor-btn .btn-abrir-formulario.active {
@@ -210,11 +210,11 @@ body {
 	padding: 10px;
 	font-size: 22px;
 	color: #fff;
-	background: #2364d2;
-	box-shadow: 2px 2px 10px 0px rgba(0,85,212,0.4);
+	background: rgb(167, 164, 10);
+	box-shadow: 2px 2px 10px 0px rgb(167, 164, 10);
 	cursor: pointer;
 }
 
 .formulario-tarjeta .btn-enviar:hover {
-	background: #1850b1;
+	background: #5c5e09;
 }
